annotation backend prototype ready and operational but not for overlapping annotations

--- a/sina/templates/index.html
+++ b/sina/templates/index.html
@@ -15,7 +15,7 @@
       <div class="jumbotron">
 	<h2>Sina Annotator</h2>
       </div>
-      <div id="sina-sentence">
+      <div id="sina-sentence" data-adoc-id="{{ docid }}">
 	{{ sentence | safe }}
       </div>
       <div id="sina-nav">
