--- a/sina/templates/index.html
+++ b/sina/templates/index.html
@@ -28,7 +28,8 @@
       </div>
       <div class="footer">
 	<br />
-	sina project - Christophe Van Neste
+	sina project - Christophe Van Neste - <a href="/quit">Stop the
+	annotation server</a>
       </div>
     </div>
     <!--Scripts-->
