--- a/sina/templates/index.html
+++ b/sina/templates/index.html
@@ -26,7 +26,7 @@
 
       {% if metadata %}
       <div id="annot8meta">
-	{{ metadata['title'] }} - {{ metadata['comment'] }}
+	<em>{{ metadata['title'] }}</em> - {{ metadata['comment'] }}
       </div>
       {% endif %}
       
